[package]
name = "jslow"
version = "0.1.0"
edition = "2021"
default-run = "jslow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
nom-regex = "0.2.0"
regex = "1.7.0"
rust_decimal = "1.27.0"
rust_decimal_macros = "1.27.0"

[dev-dependencies]
rstest = "0.16.0"
